Revert "Update WildFly 26.1 (#269)"
This reverts commit a0552d10e4f0da0a0a9a72904429fce5b85d2efc.