@@ -9,17 +9,15 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.target>11</maven.compiler.target>
-		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 
-		<wildfly.version>26.1.0.Final</wildfly.version>
-		<wildfly.core.version>18.1.0.Final</wildfly.core.version>
-		<jboss-jakartaee-8.0.version>1.0.1.Final</jboss-jakartaee-8.0.version>
-		<wildfly-jakartaee8-with-tools.version>26.1.0.Final</wildfly-jakartaee8-with-tools.version>
+		<wildfly.version>15.0.1.Final</wildfly.version>
+		<wildfly.core.version>7.0.0.Final</wildfly.core.version>
+		<jboss-javaee-8.0.version>1.0.4.Final</jboss-javaee-8.0.version>
+		<wildfly-javaee8-with-tools.version>15.0.1.Final</wildfly-javaee8-with-tools.version>
 
-		<slf4j.version>1.7.36</slf4j.version>
-
-		<version.wildfly.maven.plugin>3.0.0.Final</version.wildfly.maven.plugin>
+		<version.wildfly.maven.plugin>1.2.2.Final</version.wildfly.maven.plugin>
 		<version.compiler.plugin>3.10.0</version.compiler.plugin>
 		<version.jaxb2.plugin>1.5</version.jaxb2.plugin>
 		<version.jar.plugin>3.2.2</version.jar.plugin>
@@ -46,10 +44,8 @@
 		<geolatte-geom.version>1.0.6</geolatte-geom.version>
 		<geotools.version>19.3</geotools.version>
 
-		<jaxb-version>2.3.3</jaxb-version>
-		<dom4j.version>2.1.3</dom4j.version>
-		<jettison.version>1.4.0</jettison.version>
-
+		<jaxb-version>2.2.11</jaxb-version>
+		<dom4j.version>2.1.1</dom4j.version>
 		<lombok-version>1.18.22</lombok-version>
 		<lombok-maven-plugin-version>1.18.20.0</lombok-maven-plugin-version>
 		<prometheus.agent.version>0.16.1</prometheus.agent.version>
@@ -61,7 +57,10 @@
 		<rutebanken.helpers.version>1.0.55</rutebanken.helpers.version>
 		<owasp-dependency-check-plugin.version>6.5.3</owasp-dependency-check-plugin.version>
 
-		<wildfly-arquillian-container-embedded.version>3.0.1.Final</wildfly-arquillian-container-embedded.version>
+		<shrinkwrap-resolver-bom.version>2.2.6</shrinkwrap-resolver-bom.version>
+		<arquillian-version>1.4.1.Final</arquillian-version>
+		<wildfly-arquillian-container-embedded.version>2.2.0.Final</wildfly-arquillian-container-embedded.version>
+
 
 
 	</properties>
@@ -90,6 +89,18 @@
 			<id>osgeo</id>
 			<name>Open Source Geospatial Foundation Repository</name>
 			<url>https://download.osgeo.org/webdav/geotools/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+
+		<!--Adding explicitly Maven Central so that Shrinkwrap can download artifacts
+		  (in the version of Shrinkwrap used by Chouette, the URL for Maven Central is hardcoded to http://. not https://)
+		  -->
+		<repository>
+			<id>maven-central-https</id>
+			<name>Maven Central HTTPS</name>
+			<url>https://repo1.maven.org/maven2/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -345,7 +356,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${version.surefire.plugin}</version>
 				<configuration>
-					<argLine>-Djboss.socket.binding.port-offset=300 --add-modules=java.se --add-opens=java.base/java.util=ALL-UNNAMED</argLine>
+					<argLine>-Djboss.socket.binding.port-offset=300</argLine>
 					<runOrder>alphabetical</runOrder>
 					<!-- Fork every test because it will launch a separate AS instance -->
 					<forkCount>1</forkCount>
@@ -381,6 +392,15 @@
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok-maven-plugin</artifactId>
 				<version>${lombok-maven-plugin-version}</version>
+				<dependencies>
+					<dependency>
+						<groupId>sun.jdk</groupId>
+						<artifactId>tools</artifactId>
+						<version>1.6</version>
+						<scope>system</scope>
+						<systemPath>${java.home}/../lib/tools.jar</systemPath>
+					</dependency>
+				</dependencies>
 				<executions>
 					<execution>
 						<id>delombok</id>
@@ -665,6 +685,16 @@
 				<artifactId>mobi.chouette.exchange.netexprofile</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+		<!-- 	<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>mobi.chouette.exchange.kml</artifactId>
+				<version>${project.version}</version>
+			</dependency> -->
+		<!-- 	<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>mobi.chouette.exchange.hub</artifactId>
+				<version>${project.version}</version>
+			</dependency> -->
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>mobi.chouette.exchange.regtopp</artifactId>
@@ -685,7 +715,12 @@
 				<artifactId>mobi.chouette.exchange.stopplace</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			<dependency>
+<!-- 			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>mobi.chouette.exchange.converter</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+ -->			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>mobi.chouette.service</artifactId>
 				<version>${project.version}</version>
@@ -707,24 +742,18 @@
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.spec</groupId>
-				<artifactId>jboss-jakartaee-8.0</artifactId>
+				<artifactId>jboss-javaee-8.0</artifactId>
 				<type>pom</type>
-				<version>${jboss-jakartaee-8.0.version}</version>
+				<version>${jboss-javaee-8.0.version}</version>
 				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>org.wildfly.bom</groupId>
-				<artifactId>wildfly-jakartaee8-with-tools</artifactId>
-				<version>${wildfly-jakartaee8-with-tools.version}</version>
+				<artifactId>wildfly-javaee8-with-tools</artifactId>
+				<version>${wildfly-javaee8-with-tools.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.codehaus.jettison</groupId>
-				<artifactId>jettison</artifactId>
-				<version>${jettison.version}</version>
 			</dependency>
 
 
@@ -781,6 +810,21 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
+				<groupId>org.wildfly.arquillian</groupId>
+				<artifactId>wildfly-arquillian-container-embedded</artifactId>
+				<version>${wildfly-arquillian-container-embedded.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.wildfly.arquillian</groupId>
+				<artifactId>wildfly-arquillian-common</artifactId>
+				<version>${wildfly-arquillian-container-embedded.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.wildfly.core</groupId>
+				<artifactId>wildfly-embedded</artifactId>
+				<version>${wildfly.core.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
 				<version>${postgresql.version}</version>
@@ -808,29 +852,51 @@
 				<version>0.6.0</version>
 				<scope>test</scope>
 			</dependency>
-
+			<!-- postgres intergration in arquillian -->
+			<!-- shrinkwrap BOM -->
 			<dependency>
-				<groupId>org.wildfly.arquillian</groupId>
-				<artifactId>wildfly-arquillian-container-embedded</artifactId>
-				<version>${wildfly-arquillian-container-embedded.version}</version>
+				<groupId>org.jboss.shrinkwrap.resolver</groupId>
+				<artifactId>shrinkwrap-resolver-bom</artifactId>
+				<version>${shrinkwrap-resolver-bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 			<dependency>
-				<groupId>org.wildfly.core</groupId>
-				<artifactId>wildfly-embedded</artifactId>
-				<version>${wildfly.core.version}</version>
+				<groupId>org.jboss.shrinkwrap.resolver</groupId>
+				<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+				<version>${shrinkwrap-resolver-bom.version}</version>
+				<scope>test</scope>
 			</dependency>
-
-			<!-- Other Dependencies -->
+			<!-- shrinkwrap dependency chain -->
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-simple</artifactId>
-				<version>${slf4j.version}</version>
+				<groupId>org.jboss.shrinkwrap.resolver</groupId>
+				<artifactId>shrinkwrap-resolver-depchain</artifactId>
+				<version>${shrinkwrap-resolver-bom.version}</version>
+				<type>pom</type>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-simple</artifactId>
+				<version>1.7.36</version>
+				<scope>test</scope>
+			</dependency>
+
+			<!-- arquillian itself -->
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>${arquillian-version}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+
+
+			<!-- Other Dependencies -->
+			<dependency>
+				<groupId>org.slf4j</groupId>
 				<artifactId>log4j-over-slf4j</artifactId>
-				<version>${slf4j.version}</version>
+				<version>1.7.36</version>
 			</dependency>
 			<dependency>
 				<groupId>org.projectlombok</groupId>
@@ -905,25 +971,23 @@
 				<artifactId>gt-epsg-hsql</artifactId>
 				<version>${geotools.version}</version>
 			</dependency>
-
 			<dependency>
-				<groupId>jakarta.xml.bind</groupId>
-				<artifactId>jakarta.xml.bind-api</artifactId>
+	            <groupId>javax.xml.bind</groupId>
+	            <artifactId>jaxb-api</artifactId>
 				<version>${jaxb-version}</version>
 			</dependency>
-
 			<dependency>
  				<groupId>com.sun.xml.bind</groupId>
  	            <artifactId>jaxb-impl</artifactId>
 				<version>${jaxb-version}</version>
 			</dependency>
-
-
 			<dependency>
-				<groupId>javax.annotation</groupId>
-				<artifactId>javax.annotation-api</artifactId>
-				<version>1.3.2</version>
+ 				<groupId>com.sun.xml.bind</groupId>
+ 	            <artifactId>jaxb-core</artifactId>
+				<version>${jaxb-version}</version>
 			</dependency>
+
+
 
 		</dependencies>
 
@@ -933,18 +997,15 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>${slf4j.version}</version>
+			<version>1.7.36</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
-			<groupId>org.codehaus.plexus</groupId>
-			<artifactId>plexus-utils</artifactId>
-			<version>3.2.1</version>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-aether-provider</artifactId>
+			<version>3.2.5</version>
 			<scope>test</scope>
 		</dependency>
-
-
 	</dependencies>
 
 	<profiles>
